--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -10,9 +10,9 @@
     <h1>RoyalStone</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Categorias</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/categoria">Categorias</a></li>
+        <li><a href="/contato">Contato</a></li>
       </ul>
     </nav>
   </header>
