--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -13,6 +13,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/categoria">Categorias</a></li>
         <li><a href="/contato">Contato</a></li>
+        <li><a href="/login">Login</a></li>
       </ul>
     </nav>
   </header>
