--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -14,12 +14,12 @@
         <li><a href="/categoria">Categorias</a></li>
         <li><a href="/contato">Contato</a></li>
         <li><a href="/login">Login</a></li>
+        <li><a href="/loja">Loja</a></li>
       </ul>
     </nav>
   </header>
 
   <main class="container">
-    <button>Compre aqui</button>
     <div class="grid-produtos">
       <div class="produto">
         <img src="img/colar.png" alt="Necklace">
