--- a/src/main/resources/templates/cliente/categoria.html
+++ b/src/main/resources/templates/cliente/categoria.html
@@ -12,8 +12,9 @@
     <nav>
       <ul>
         <li><a href="/">Início</a></li>
-        <li><a href="/categorias">Categorias</a></li>
         <li><a href="/contato">Contato</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/loja">Loja</a></li>
       </ul>
     </nav>
   </header>
@@ -22,19 +23,19 @@
     <h2>Categorias</h2>
     <div class="categorias">
       <div class="categoria">
-        <img src="/img/colar.png" alt="Colares">
+        <img src="https://images.unsplash.com/photo-1741886422087-204620c77a85?q=80&w=764&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Colares">
         <h3>Colares</h3>
       </div>
       <div class="categoria">
-        <img src="/img/anel.png" alt="Anéis">
+        <img src="https://images.unsplash.com/photo-1588444650733-d0767b753fc8?q=80&w=1198&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Anéis">
         <h3>Anéis</h3>
       </div>
       <div class="categoria">
-        <img src="/img/brinco.png" alt="Brincos">
+        <img src="https://images.unsplash.com/photo-1683245597322-79659ee86fb3?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Brincos">
         <h3>Brincos</h3>
       </div>
       <div class="categoria">
-        <img src="/img/pulseira.png" alt="Pulseiras">
+        <img src="https://images.unsplash.com/photo-1743127187686-e6145b08658b?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Pulseiras">
         <h3>Pulseiras</h3>
       </div>
     </div>
