--- a/src/main/resources/templates/cliente/contato.html
+++ b/src/main/resources/templates/cliente/contato.html
@@ -13,7 +13,8 @@
       <ul>
         <li><a href="/">Início</a></li>
         <li><a href="/categoria">Categorias</a></li>
-        <li><a href="/contato">Contato</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/loja">Loja</a></li>
       </ul>
     </nav>
   </header>
