--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -22,24 +22,24 @@
   <main class="container">
     <div class="grid-produtos">
       <div class="produto">
-        <img src="img/colar.png" alt="Necklace">
+        <img src="https://images.unsplash.com/photo-1741886422087-204620c77a85?q=80&w=764&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Necklace">
         <h3>Colar</h3>
-        <p>$199</p>
+        <p>R$ 8.000,00</p>
       </div>
       <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Earrings">
+        <img src="https://images.unsplash.com/photo-1588444650733-d0767b753fc8?q=80&w=1198&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Earrings">
         <h3>Brincos</h3>
-        <p>$129</p>
+        <p>R$ 3.500,00</p>
       </div>
       <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Ring">
+        <img src="https://images.unsplash.com/photo-1683245597322-79659ee86fb3?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Ring">
         <h3>Anel</h3>
-        <p>$259</p>
+        <p>R$ 2.000,00</p>
       </div>
       <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Bracelet">
+        <img src="https://images.unsplash.com/photo-1743127187686-e6145b08658b?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bracelet">
         <h3>Pulseira</h3>
-        <p>$179</p>
+        <p>R$ 4.000,00</p>
       </div>
     </div>
   </main>
